--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
+<style>
+</style>
 <h1>Git Tutorial</h1>
 <h1>sopot</h1>
 <h2>John Richard Albarando</h2>
