--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
-<head>
-    <link rel="stylesheet" href="index.css"/>
-</head>
-<body>
-<style>
-</style>
-<h1>Git Tutorial</h1>
-<h1>sopot</h1>
-<h2>John Richard Albarando</h2>
-
-</body>
+  <head>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <style></style>
+    <h1>Git Tutorial</h1>
+    <br />
+    <h2>John Richard Albarando</h2>
+    <h4>RJ supot</h4>
+  </body>
 </html>
