--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <br />
     <h2>John Richard Albarando</h2>
     <h4>RJ supot</h4>
+    
+    <h6>No copyright 2023 - 2024</h6>
   </body>
 </html>
